--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dynamic-labs/sdk-react-core": "^4.37.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
