--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@dynamic-labs/sdk-react-core": "^4.37.1",
+    "@dynamic-labs/ethereum": "^4",
+    "@dynamic-labs/sdk-react-core": "^4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
