Add CORS support and update package backend dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
     "ethers": "^6.15.0",
     "express": "^5.1.0"
   },
