--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@dynamic-labs/ethereum": "^4",
     "@dynamic-labs/sdk-react-core": "^4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "vitest": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
