--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@dynamic-labs/ethereum": "^4",
     "@dynamic-labs/sdk-react-core": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "vitest": "^4.0.13"
