--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsx --test src/tests/*.ts",
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
-    "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "ethers": "^6.15.0",
     "express": "^5.1.0"
@@ -15,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
+    "@types/cors": "^2.8.19",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
