--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethers": "^6.15.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
-    "@types/cors": "^2.8.19",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
