--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "ethers": "^6.15.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "zod": "^4.1.13"
   },
   "devDependencies": {
