--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "winston": "^3.11.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
